Regression: Toggle X-Ray breaks Face selection mode when Show On Cage active. #95976

Closed
opened 2022-02-23 02:16:49 +01:00 by sicutunum · 6 comments

System Information
Operating system: Windows-10-10.0.19042-SP0 64 Bits
Graphics card: GeForce GT 740/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.71

Blender Version
Broken: version: 3.1.0 Beta, branch: master, commit date: 2022-02-21 23:16, hash: ec5bbebf3e
Worked: 3.0.1 Official

Short description of error
While in edit mode, mesh becomes unselectable when Toggle X-Ray (not wireframe viewport shading) is active if mesh selection mode is set to Faces when objects have modifiers where Show On Cage and Show On Edit Mode options are active (i.e. subsurf modifier). Note you can still press A to select all in this state and you can select while verts or edge selection modes are active but not Faces.

Exact steps for others to reproduce the error

  1. Open Blender.
  2. Add a subsurf modifier to the default cube.
  3. Enable the "Show On Cage" setting of the subsurf modifier.
  4. Enable Toggle X-Ray (not Wireframe viewport shading).
  5. Change mesh selection type to Faces.
  6. Try to select with any Blender selection method, no selection methods work while Face selection mode is active.
**System Information** Operating system: Windows-10-10.0.19042-SP0 64 Bits Graphics card: GeForce GT 740/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.71 **Blender Version** Broken: version: 3.1.0 Beta, branch: master, commit date: 2022-02-21 23:16, hash: `ec5bbebf3e` Worked: 3.0.1 Official **Short description of error** While in edit mode, mesh becomes unselectable when Toggle X-Ray (not wireframe viewport shading) is active if mesh selection mode is set to Faces when objects have modifiers where Show On Cage and Show On Edit Mode options are active (i.e. subsurf modifier). Note you can still press A to select all in this state and you can select while verts or edge selection modes are active but not Faces. **Exact steps for others to reproduce the error** 1. Open Blender. 2. Add a subsurf modifier to the default cube. 3. Enable the "Show On Cage" setting of the subsurf modifier. 4. Enable Toggle X-Ray (not Wireframe viewport shading). 5. Change mesh selection type to Faces. 6. Try to select with any Blender selection method, no selection methods work while Face selection mode is active.
Author

Added subscriber: @sicutunum

Added subscriber: @sicutunum

Added subscribers: @kevindietrich, @deadpin

Added subscribers: @kevindietrich, @deadpin

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This is related to the Viewport -> Subdivision -> GPU Subdivision user preference. Disabling it will allow things to work.

CC @kevindietrich

This is related to the Viewport -> Subdivision -> GPU Subdivision user preference. Disabling it will allow things to work. CC @kevindietrich
Philipp Oeser changed title from Toggle X-Ray breaks Face selection mode when Show On Cage active. to Regression: Toggle X-Ray breaks Face selection mode when Show On Cage active. 2022-02-23 11:06:59 +01:00

This issue was referenced by b7a954218b

This issue was referenced by b7a954218b0d1b90b67f228ae3ab8498710a1a65

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Kévin Dietrich self-assigned this 2022-02-24 14:34:25 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#95976
No description provided.