source/blender/editors/space_view3d/view3d_iterators.c
@@ -39,6 +39,7 @@
 #include "BKE_editmesh.h"
 #include "BKE_mesh_iterators.h"
 #include "BKE_mesh_runtime.h"
+#include "BKE_mesh_wrapper.h"
 #include "BKE_modifier.h"
 
 #include "DEG_depsgraph.h"
@@ -348,6 +349,7 @@ void mesh_foreachScreenVert(
 
   Mesh *me = editbmesh_get_eval_cage_from_orig(
       vc->depsgraph, vc->scene, vc->obedit, &CD_MASK_BAREMESH);
+  me = BKE_mesh_wrapper_ensure_subdivision(vc->obedit, me);
 
   ED_view3d_check_mats_rv3d(vc->rv3d);
 
@@ -410,6 +412,7 @@ void mesh_foreachScreenEdge(ViewContext *vc,
 
   Mesh *me = editbmesh_get_eval_cage_from_orig(
       vc->depsgraph, vc->scene, vc->obedit, &CD_MASK_BAREMESH);
+  me = BKE_mesh_wrapper_ensure_subdivision(vc->obedit, me);
 
   ED_view3d_check_mats_rv3d(vc->rv3d);
 
@@ -497,6 +500,7 @@ void mesh_foreachScreenEdge_clip_bb_segment(ViewContext *vc,
 
   Mesh *me = editbmesh_get_eval_cage_from_orig(
       vc->depsgraph, vc->scene, vc->obedit, &CD_MASK_BAREMESH);
+  me = BKE_mesh_wrapper_ensure_subdivision(vc->obedit, me);
 
   ED_view3d_check_mats_rv3d(vc->rv3d);
 
@@ -568,6 +572,7 @@ void mesh_foreachScreenFace(
 
   Mesh *me = editbmesh_get_eval_cage_from_orig(
       vc->depsgraph, vc->scene, vc->obedit, &CD_MASK_BAREMESH);
+  me = BKE_mesh_wrapper_ensure_subdivision(vc->obedit, me);
   ED_view3d_check_mats_rv3d(vc->rv3d);
 
   data.vc = *vc;
